Adding PDF and making some changes

--- a/css/main.css
+++ b/css/main.css
@@ -282,5 +282,5 @@ textarea {
 }
 
 .li-connect-widget .li-connect-mark {
-    background: url("/img/LinkedIn.png") -92px -42px no-repeat !important;
+    background: url("/resources/img/LinkedIn.png") -92px -42px no-repeat !important;
 }
